--- a/content/books.html
+++ b/content/books.html
@@ -10,10 +10,42 @@
     <title>Books</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
+
+<p style="margin-bottom: 0.5rem">&nbsp</p>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="mx-auto order-0">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link" href="intro.html">Intro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="work.html">Work<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="curriculum_vitae.html">CV</a>
+            </li>
+            <li class="nav-item active">
+                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link" href="books.html">Books</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <body class="is-preload">
 
@@ -22,7 +54,7 @@
         <!-- Six -->
         <section class="wrapper style1 align-center">
             <div class="inner">
-                <h2>Books</h2>
+                <h1>Books</h1>
                 <p>These are my favorite books, I hope you enjoy them ASSHAT.</p>
                 <div class="items style1 medium onscroll-fade-in">
                     <section>
@@ -50,6 +82,7 @@
         </section>
 
         <!-- Seven -->
+        <!--
         <section class="wrapper style1 align-center">
             <div class="inner medium">
                 <h2>Get in touch</h2>
@@ -75,6 +108,7 @@
 
             </div>
         </section>
+ -->
 
         <!-- Footer -->
         <footer class="wrapper style1 align-center">
@@ -103,6 +137,15 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
