CHANGE: Corrected currently active links

--- a/content/intro.html
+++ b/content/intro.html
@@ -10,10 +10,42 @@
     <title>Intro</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
+
+<p style="margin-bottom: 0.5rem">&nbsp</p>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="mx-auto order-0">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link active" href="intro.html">Intro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="work.html">Work<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="curriculum_vitae.html">CV</a>
+            </li>
+            <li class="nav-item">
+                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link" href="books.html">Books</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <body class="is-preload">
 
