ADD: Auto generated templates

--- a/content/work.html
+++ b/content/work.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+<!-- HTML 5up template: Story
+!! THIS IS AN AUTOMATICALLY GENERATED FILE. DO NOT CHANGE ANYTHING BY HAND, AS IT WILL BE OVERWRITTEN
 -->
 <html>
 
@@ -17,6 +15,7 @@
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
+<!-- You have to set the active link here-->
 <p style="margin-bottom: 0.5rem">&nbsp</p>
 
 <!-- Navbar -->
@@ -30,25 +29,24 @@
     <div class="mx-auto order-0">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="intro.html">Intro</a>
+                <a class="nav-link " href="intro.html">Intro</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="work.html">Work<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="curriculum_vitae.html">CV</a>
+                <a class="nav-link " href="curriculum_vitae.html">CV</a>
             </li>
-            <li class="nav-item">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+            <li class="nav-item  ">
                 <a class="nav-link" href="books.html">Books</a>
             </li>
         </ul>
     </div>
 </nav>
 
-
 <body class="is-preload">
+
+
 
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
@@ -59,37 +57,38 @@
                 <p>Here is some Fließtext about work I do bla bla</p>
                 <div class="index align-left">
                     <section style="padding-bottom: 35px">
-                        <header><img width="100" height="100" src="blackhole.jpg" alt="Black Hole depiction"></header>
+                        <header><img width="100" height="100" src="images/blackhole.jpg" alt="Black Hole depiction">
+                        </header>
                         <div class="content">My brain mass is higher than this black hole. Ask Stephen Hawking, he was
                             allowed to study my brain for his book "A Brief History of Time".</div>
                     </section>
                     <section>
+                        <header><img width="100" height="100" src="images/blackhole2.jpg" alt="Black Hole depiction">
+                        </header>
                         <div class="content">And also a lot higher than this black hole. Massive even. My brain power is
                             just a single singularity.</div>
-                        <header><img width="100" height="100" src="blackhole2.jpg" alt="Black Hole depiction"></header>
                     </section>
                 </div>
         </section>
-
-        <!-- Footer -->
-        <footer class="wrapper style1 align-center">
-            <div class="inner">
-                <ul class="icons">
-                    <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
-                    </li>
-                    <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-                    </li>
-                    <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
-                    </li>
-                    <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-                </ul>
-                <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-            </div>
-        </footer>
-
     </div>
 
+
+    <!-- Footer -->
+    <footer class="wrapper style1 align-center">
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+                </li>
+                <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
+                </li>
+                <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+            <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+        </div>
+    </footer>
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
@@ -98,6 +97,15 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
