--- a/content/curriculum_vitae.html
+++ b/content/curriculum_vitae.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+<!-- HTML 5up template: Story
+!! THIS IS AN AUTOMATICALLY GENERATED FILE. DO NOT CHANGE ANYTHING BY HAND, AS IT WILL BE OVERWRITTEN
 -->
 <html>
 
@@ -14,11 +12,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
 </head>
 
+<!-- You have to set the active link here-->
 <p style="margin-bottom: 0.5rem">&nbsp</p>
-
+ 
 <!-- Navbar -->
 <nav class="navbar navbar-expand navbar-light bg-light">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -31,15 +30,15 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="intro.html">Intro</a>
+                <a class="nav-link " href="intro.html">Intro</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="work.html">Work<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="curriculum_vitae.html">CV</a>
+                <a class="nav-link " href="work.html">Work<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link active" href="curriculum_vitae.html">CV</a>
+            </li>
+            <li class="nav-item  ">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
                 <a class="nav-link" href="books.html">Books</a>
             </li>
@@ -49,56 +48,65 @@
 
 <body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper" class="divided">
-        <!-- Six -->
-        <section class="wrapper style1 align-center">
-            <div class="inner">
-                <h1>Curriculum Vitae</h1>
-                <p>I did cool stuff yo.</p>
-                <div class="index align-left">
-                    <section>
-                        <header>Abitur</header>
-                        <div class="content">I did it at the best gymnasium in this world, the hegau</div>
-                    </section>
-                    <section>
-                        <header>Studium</header>
-                        <div class="content">I did a BLaw at first but then found philo better.</div>
-                    </section>
-                    <section>
-                        <header>Auszeichnungen</header>
-                        <div class="content">I won the award for best chess player.</div>
-                    </section>
-                </div>
-        </section>
+    
+<!-- Wrapper -->
+<div id="wrapper" class="divided">
+    <!-- Six -->
+    <section class="wrapper style1 align-center">
+        <div class="inner">
+            <h1>Curriculum Vitae</h1>
+            <p>I did cool stuff yo.</p>
+            <div class="index align-left">
+                <section>
+                    <header>Abitur</header>
+                    <div class="content">I did it at the best gymnasium in this world, the hegau</div>
+                </section>
+                <section>
+                    <header>Studium</header>
+                    <div class="content">I did a BLaw at first but then found philo better.</div>
+                </section>
+                <section>
+                    <header>Auszeichnungen</header>
+                    <div class="content">I won the award for best chess player.</div>
+                </section>
+            </div>
+    </section>
+</div>
+
 
         <!-- Footer -->
-        <footer class="wrapper style1 align-center">
-            <div class="inner">
-                <ul class="icons">
-                    <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
-                    </li>
-                    <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-                    </li>
-                    <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
-                    </li>
-                    <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-                </ul>
-                <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-            </div>
-        </footer>
-
-    </div>
-
+    <footer class="wrapper style1 align-center">
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+                </li>
+                <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
+                </li>
+                <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
+                </li>
+                <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+            <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+        </div>
+    </footer>
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </body>
 
