--- a/content/books.html
+++ b/content/books.html
@@ -87,16 +87,10 @@
     <footer class="wrapper style1 align-center">
         <div class="inner">
             <ul class="icons">
-                <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
-                </li>
-                <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-                </li>
-                <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
-                </li>
+                <li><a href="https://www.researchgate.net/profile/Levin_Guever" class="icon brands style2 fa-researchgate"><span class="label">Researchgate</span></a></li>
                 <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
             </ul>
-            <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p>&copy; Levin Güver</p>
         </div>
     </footer>
     <!-- Scripts -->
