ADD: Medium to footer + solid envelope

--- a/content/work.html
+++ b/content/work.html
@@ -76,16 +76,19 @@
         </section>
     </div>
 
-        <!-- Footer -->
-    <footer class="wrapper style1 align-center">
-        <div class="inner">
-            <ul class="icons">
-                <li><a href="https://www.researchgate.net/profile/Levin_Guever" class="icon brands style2 fa-researchgate"><span class="label">Researchgate</span></a></li>
-                <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-            </ul>
-            <p>&copy; Levin Güver</p>
-        </div>
-    </footer>
+    <!-- Footer -->
+<footer class="wrapper style1 align-center">
+    <div class="inner">
+        <ul class="icons">
+            <li><a href="https://www.researchgate.net/profile/Levin_Guever"
+                    class="icon brands style2 fa-researchgate"><span class="label">Researchgate</span></a></li>
+            <li><a href="https://medium.com/@levin.guever" class="icon brands style2 fa-medium"><span
+                        class="label">Medium</span></a></li>
+            <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+        </ul>
+        <p>&copy; Levin Güver</p>
+    </div>
+</footer>
     <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
