CHANGE: Ordering of index page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 				<div class="inner">
 					<h1>Levin Güver</h1>
 					<p>A bad mofo.</p>
-					<h2> <a href="content/intro.html">Intro</a> <a href="content/books.html">Books</a>
-						<a href="content/work.html">Work</a> <a href="content/curriculum_vitae.html">CV</a>
+					<h2> 
+						<a href="content/intro.html">Intro</a> 
+						<a href="content/work.html">Work</a> 
+						<a href="content/curriculum_vitae.html">CV</a>
+						<a href="content/books.html">Books</a>
 					</h2>
 				</div>
 			</div>
