ADD: More books to book section

--- a/content/books.html
+++ b/content/books.html
@@ -77,6 +77,16 @@
         <h3>A Brief History of time</h3>
         <p>Stephen Hawking seems like a smart guy so I read this.</p>
     </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>A Brief History of time</h3>
+        <p>Stephen Hawking seems like a smart guy so I read this.</p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>A Brief History of time</h3>
+        <p>Stephen Hawking seems like a smart guy so I read this.</p>
+    </section>
 </div>
 
 
