ADD: First update to levins new wishes

--- a/content/about.html
+++ b/content/about.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Curriculum Vitae</title>
+    <title>About</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,17 +30,13 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link " href="intro.html">Intro</a>
+                <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="work.html">Work<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="curriculum_vitae.html">CV</a>
+                <a class="nav-link " href="research.html">Resarch<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item  ">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="books.html">Books</a>
+                <a class="nav-link" href="personal.html">Personal</a>
             </li>
         </ul>
     </div>
@@ -52,21 +48,35 @@
         <!-- Six -->
         <section class="wrapper style1 align-center">
             <div class="inner">
-                <h1>Curriculum Vitae</h1>
+                <h1>About</h1>
                 
-<p>I did cool stuff yo.</p>
-<div class="index align-left">
+
+<div class="index align-center">
     <section>
-        <header>Abitur</header>
-        <div class="content">I did it at the best gymnasium in this world, the hegau</div>
-    </section>
-    <section>
-        <header>Studium</header>
-        <div class="content">I did a BLaw at first but then found philo better.</div>
-    </section>
-    <section>
-        <header>Auszeichnungen</header>
-        <div class="content">I won the award for best chess player.</div>
+        <div class="content">
+            <p>
+                Hey there—thanks for visiting my website! My name is Levin Sinan Güver and I am currently pursuing a
+                Master
+                of Law at the University of Zurich. My subject of interest is legal philosophy, where I am most
+                passionate
+                about the normative considerations underlying the criminal law. I am also interested in neuroethics and
+                artificial intelligence. In my free time I enjoy going to the gym, reading, and playing chess.
+            </p>
+            <p>
+                You can find my full CV here [hyperlinked]. If you are interested in the research I am conducting, check
+                out
+                the Research page. The Personal page includes a glimpse at some of my favourite books—each paired with a
+                short summary. As the website develops, I will be sure to add more sections to the Personal page, such
+                as
+                quotes and pictures, so stay tuned for that!
+            </p>
+            <p>
+                If you want to get in touch, you can reach me under the following address: levinsinan.guever@uzh.ch
+            </p>
+            <p>
+            —or, alternatively, by clicking on the mail icon at the bottom of the page.
+            </p>
+        </div>
     </section>
 </div>
 
