--- a/content/personal.html
+++ b/content/personal.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Intro</title>
+    <title>Personal</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,17 +30,13 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link active" href="intro.html">Intro</a>
+                <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="work.html">Work<span class="sr-only">(current)</span></a>
+                <a class="nav-link " href="research.html">Resarch<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " href="curriculum_vitae.html">CV</a>
-            </li>
-            <li class="nav-item  ">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="books.html">Books</a>
+            <li class="nav-item active ">
+                <a class="nav-link" href="personal.html">Personal</a>
             </li>
         </ul>
     </div>
@@ -52,17 +48,61 @@
         <!-- Six -->
         <section class="wrapper style1 align-center">
             <div class="inner">
-                <h1>Intro</h1>
+                <h1>Personal</h1>
                 
 
-<div class="index align-center">
+<style>
+    .subtitle {
+        margin-top: -8%;
+        font-style: italic;
+        letter-spacing: 0.04em;
+    }
+</style>
+
+<p>Some of my favourite reads throughout the years :-)</p>
+<div class="items style1 medium onscroll-fade-in">
     <section>
-        <div class="content">
-            <p>Hey. There should be some really meaningful stuff here. I want to tell YOU
-                that I am LEVIN GÜVER. These sections wrap around on every possible screen size! this is
-                verrrrryyyyy nice.</p>
-            <p>PLEASE CONTACTJE ME UNDER THIS FAKE EMAIL: MRNICE@NICE.NICE</p>
-        </div>
+        <span><img src="images/marc_aurel.jpg" width="42" height="42" style="border-radius: 50%"></span>
+        <h3>The Bookthief</h3>
+        <h4 class="subtitle">Markus Zusak</h4>
+        <p></p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-save"></span>
+        <h3>The Myth of Sisyphus</h3>
+        <h4 class="subtitle">Albert Camus</h4>
+        <p></p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-chart-bar"></span>
+        <h3>The Robot Series</h3>
+        <h4 class="subtitle">Isaac Asimov</h4>
+        <p>Four novels <i>(The Caves of Steel, The Naked Sun, The Robots of Dawn, Robots and Empire)</i> composing a
+            standalone, unified sci-fi adventure of the highest calibre.</p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>Meditations</h3>
+        <h4 class="subtitle">Marcus Aurelius</h4>
+        <p></p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>Die Leiden des jungen Werther</h3>
+        <h4 class="subtitle">Johann Wolfgang von Goethe</h4>
+        <p></p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>A Brief History of Time</h3>
+        <h4 class="subtitle">Stephen Hawking</h4>
+        <p></p>
+    </section>
+    <section>
+        <span class="icon solid style2 major fa-wifi"></span>
+        <h3>Flash Boys</h3>
+        <h4 class="subtitle">Michael Lewis</h4>
+        <p></p>
     </section>
 </div>
 
