--- a/content/research.html
+++ b/content/research.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Work</title>
+    <title>Research</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,17 +30,13 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link " href="intro.html">Intro</a>
+                <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="work.html">Work<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="curriculum_vitae.html">CV</a>
+                <a class="nav-link active" href="research.html">Resarch<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item  ">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="books.html">Books</a>
+                <a class="nav-link" href="personal.html">Personal</a>
             </li>
         </ul>
     </div>
@@ -52,22 +48,34 @@
         <!-- Six -->
         <section class="wrapper style1 align-center">
             <div class="inner">
-                <h1>Work</h1>
+                <h1>Research</h1>
                 
 
-<p>Here is some Fließtext about work I do bla bla</p>
-<div class="index align-left">
-    <section style="padding-bottom: 35px">
-        <header><img width="100" height="100" src="images/blackhole.jpg" alt="Black Hole depiction">
-        </header>
-        <div class="content">My brain mass is higher than this black hole. Ask Stephen Hawking, he was
-            allowed to study my brain for his book "A Brief History of Time".</div>
-    </section>
+<!-- <p>Here is some Fließtext about work I do bla bla</p> -->
+<div class="index align-center">
     <section>
-        <header><img width="100" height="100" src="images/blackhole2.jpg" alt="Black Hole depiction">
-        </header>
-        <div class="content">And also a lot higher than this black hole. Massive even. My brain power is
-            just a single singularity.</div>
+        <div class="content">
+            <p>
+                My research follows along two strands. One of these strands is an upcoming field known as Experimental
+                Philosophy. This field concerns itself with some of the foundational questions plaguing us humans since
+                the beginning of time, yet taking a novel approach: using empirical methods native to fields such as
+                cognitive psychology and neuroscience in tandem with the philosopher's armchair. In light of this, I am
+                currently part of a research group led by Dr. Markus Kneer [hyperlinked] called Reading Guilty Minds,
+                where we try to unravel the mysteries behind mental states such as belief, knowledge and intention, and
+                draw conclusions for fields which concern themselves with these mental states—for example, the law.
+            </p>
+            <p>
+                The second strand is linked; in a way, it looks at the same issues—mental states, how they come to be
+                and how they influence our actions—from a different point of view, namely that of the criminal law. I
+                try to take a step back from the empirical work and focus on the philosophical and jurisprudential
+                theories regarding action, the mind, and their link. I apply these findings cross-culturally, in light
+                of the rich tradition of both common law and civil law jurisdictions.
+            </p>
+            <p>
+                My Bachelor's Thesis concerned itself with the normative implications of modern neuroscientific findings
+                for the criminal law. The full-text can be found on my ResearchGate profile here [hyperlinked].
+            </p>
+        </div>
     </section>
 </div>
 
