--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
 		<header id="header">
 			<div>
 				<div class="inner">
-					<h1>Levin Güver</h1>
-					<p>A bad mofo.</p>
-					<h2> 
-						<a href="content/intro.html">Intro</a> 
-						<a href="content/work.html">Work</a> 
-						<a href="content/curriculum_vitae.html">CV</a>
-						<a href="content/books.html">Books</a>
-					</h2>
+					<h1>Levin S. Güver</h1>
+					<!-- <p></p> -->
+					<h3> 
+						<a href="content/about.html" style="margin-right: 2%;">About</a>
+						<a href="content/research.html" style="margin-right: 2%;" >Research</a> 
+						<a href="content/personal.html">Personal</a>
+					</h3>
 				</div>
 			</div>
 		</header>
