FIX: Correct mail address

--- a/content/personal.html
+++ b/content/personal.html
@@ -121,7 +121,7 @@
                     class="icon brands style2 fa-researchgate"><span class="label">Researchgate</span></a></li>
             <li><a href="https://medium.com/@levin.guever" class="icon brands style2 fa-medium"><span
                         class="label">Medium</span></a></li>
-            <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%6C%65%76%69%6E%2E%67%75%65%76%65%72%40%68%6F%74%6D%61%69%6C%2E%63%6F%6D" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%6C%65%76%69%6E%73%69%6E%61%6E%2E%67%75%65%76%65%72%40%75%7A%68%2E%63%68" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
         </ul>
         <p>&copy; Levin S. Güver</p>
     </div>
