ADD: Second revision changes from levin

--- a/content/personal.html
+++ b/content/personal.html
@@ -33,7 +33,7 @@
                 <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="research.html">Resarch<span class="sr-only">(current)</span></a>
+                <a class="nav-link " href="research.html">Research<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active ">
                 <a class="nav-link" href="personal.html">Personal</a>
@@ -65,7 +65,7 @@
 <div class="items style1 medium onscroll-fade-in">
     <section>
         <span><img src="images/marc_aurel.jpg" width="42" height="42" style="border-radius: 50%"></span>
-        <h3 class="booktitle">The Bookthief</h3>
+        <h3 class="booktitle">The Book Thief</h3>
         <h4 class="subtitle">Markus Zusak</h4>
         <p></p>
     </section>
