--- a/content/research.html
+++ b/content/research.html
@@ -33,7 +33,7 @@
                 <a class="nav-link " href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="research.html">Resarch<span class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="research.html">Research<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item  ">
                 <a class="nav-link" href="personal.html">Personal</a>
@@ -56,24 +56,41 @@
     <section>
         <div class="content">
             <p>
-                My research follows along two strands. One of these strands is an upcoming field known as Experimental
-                Philosophy. This field concerns itself with some of the foundational questions plaguing us humans since
-                the beginning of time, yet taking a novel approach: using empirical methods native to fields such as
-                cognitive psychology and neuroscience in tandem with the philosopher's armchair. In light of this, I am
-                currently part of a research group led by Dr. Markus Kneer [hyperlinked] called Reading Guilty Minds,
-                where we try to unravel the mysteries behind mental states such as belief, knowledge and intention, and
-                draw conclusions for fields which concern themselves with these mental states—for example, the law.
+                My research follows along two strands. One of these strands is an upcoming field known
+                as Experimental
+                Philosophy. This field concerns itself with some of the foundational questions plaguing
+                us humans since
+                the beginning of time, yet taking a novel approach: using empirical methods native to
+                fields such as
+                cognitive psychology and neuroscience in tandem with the philosopher's armchair. In
+                light of this, I am
+                currently part of a research group led by Dr. Markus Kneer <a
+                    href="https://markuskneer.com">[https://markuskneer.com]</a> called Reading Guilty
+                Minds,
+                where we try to unravel the mysteries behind mental states such as belief, knowledge and
+                intention, and
+                draw conclusions for fields which concern themselves with these mental states—for
+                example, the law.
             </p>
             <p>
-                The second strand is linked; in a way, it looks at the same issues—mental states, how they come to be
-                and how they influence our actions—from a different point of view, namely that of the criminal law. I
-                try to take a step back from the empirical work and focus on the philosophical and jurisprudential
-                theories regarding action, the mind, and their link. I apply these findings cross-culturally, in light
+                The second strand is linked; in a way, it looks at the same issues—mental states, how
+                they come to be
+                and how they influence our actions—from a different point of view, namely that of the
+                criminal law. I
+                try to take a step back from the empirical work and focus on the philosophical and
+                jurisprudential
+                theories regarding action, the mind, and their link. I apply these findings
+                cross-culturally, in light
                 of the rich tradition of both common law and civil law jurisdictions.
             </p>
             <p>
-                My Bachelor's Thesis concerned itself with the normative implications of modern neuroscientific findings
-                for the criminal law. The full-text can be found on my ResearchGate profile here [hyperlinked].
+                My Bachelor's Thesis concerned itself with the normative implications of modern
+                neuroscientific findings
+                for the criminal law. The full-text can be found on my ResearchGate profile here
+                <a
+                    href="https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law">
+                    [https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law]
+                </a>.
             </p>
         </div>
     </section>
