--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy; Levin Güver</p>
+			<p class="copyright">Levin S. Güver</p>
 		</footer>
 
 	</div>
