ADD: Short stories and book texts

--- a/content/personal.html
+++ b/content/personal.html
@@ -56,55 +56,92 @@
         font-style: italic;
         letter-spacing: 0.04em;
     }
+
     .booktitle {
         margin-bottom: 0%;
     }
 </style>
 
+<h2>>>Books</h2>
+
 <p>Some of my favourite reads throughout the years :-)</p>
 <div class="items style1 medium onscroll-fade-in">
     <section>
-        <span><img src="images/book_icons/the_book_thief.jpg" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_book_thief.jpg" width="51" height="51" style="border-radius: 50%"></span>
         <h3 class="booktitle">The Book Thief</h3>
         <h4 class="subtitle">Markus Zusak</h4>
-        <p></p>
+        <p>A captivating story on the atrocities of the Third Reich, and the lives of a handful few which tried to do
+            the right thing—told from the perspective of Death himself.</p>
     </section>
     <section>
-        <span><img src="images/book_icons/the_myth_of_sisyphus.jpg" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_myth_of_sisyphus.jpg" width="51" height="51"
+                style="border-radius: 50%"></span>
         <h3 class="booktitle">The Myth of Sisyphus</h3>
         <h4 class="subtitle">Albert Camus</h4>
-        <p></p>
+        <p>Are we humans not akin to slaves, damned to eternally push a boulder up a mountain, only to have it roll back
+            down again? If yes: what follows?</p>
     </section>
     <section>
-        <span><img src="images/book_icons/the_robot_series.png" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_robot_series.png" width="51" height="51"
+                style="border-radius: 50%"></span>
         <h3 class="booktitle">The Robot Series</h3>
         <h4 class="subtitle">Isaac Asimov</h4>
         <p>Four novels <i>(The Caves of Steel, The Naked Sun, The Robots of Dawn, Robots and Empire)</i> composing a
             standalone, unified sci-fi adventure of the highest calibre.</p>
     </section>
     <section>
-        <span><img src="images/book_icons/meditations.png" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/meditations.png" width="51" height="51" style="border-radius: 50%"></span>
         <h3 class="booktitle">Meditations</h3>
         <h4 class="subtitle">Marcus Aurelius</h4>
-        <p></p>
+        <p>Although once the most powerful man in the world—the Roman emperor—Marcus Aurelius writes humbly in his
+            diary, meditations he tells himself to get through hardship. A very accessible starting point for anyone
+            interested in Stoicism!
+        </p>
     </section>
     <section>
-        <span><img src="images/book_icons/die_leiden_des_jungen_werther.png" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_enchiridon.jpeg" width="51" height="51" style="border-radius: 50%"></span>
+        <h3 class="booktitle">Enchiridon</h3>
+        <h4 class="subtitle">Epicetus</h4>
+        <p>Concise, clear, powerful: Epictetus embodies the spirit of Stoicism in just shy of forty pages. A literal
+            'handbook' for life. </p>
+    </section>
+    <section>
+        <span><img src="images/book_icons/die_leiden_des_jungen_werther.png" width="51" height="51"
+                style="border-radius: 50%"></span>
         <h3 class="booktitle">Die Leiden des jungen Werther</h3>
         <h4 class="subtitle">Johann Wolfgang von Goethe</h4>
-        <p></p>
+        <p>It is always a pleasure to read Goethe. His words flow with the grace of a river. The story is about a young
+            man, infatuated with love.
+        </p>
     </section>
     <section>
-        <span><img src="images/book_icons/a_brief_history_of_time.png" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/a_brief_history_of_time.png" width="51" height="51"
+                style="border-radius: 50%"></span>
         <h3 class="booktitle">A Brief History of Time</h3>
         <h4 class="subtitle">Stephen Hawking</h4>
-        <p></p>
+        <p>Hawking brings across complex physical propositions in a language so simple that anyone could understand. If
+            you are interested in space and the universe, this is a must-read!</p>
     </section>
     <section>
-        <span><img src="images/book_icons/flash_boys.png" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/flash_boys.png" width="51" height="51" style="border-radius: 50%"></span>
         <h3 class="booktitle">Flash Boys</h3>
         <h4 class="subtitle">Michael Lewis</h4>
-        <p></p>
+        <p>Flash Boys takes you behind the scenes of Wall Street investment banking and makes vivid what it is exactly
+            that makes these leading corporations what they are.
+        </p>
+    </section>
+</div>
+
+<h2>>>Short Stories</h2>
+
+<div class="items style1 medium onscroll-fade-in">
+    <section>
+        <span><img src="images/book_icons/the_complete_robot.png" width="51" height="51"
+                style="border-radius: 50%"></span>
+        <h3 class="booktitle">The Complete Robot</h3>
+        <h4 class="subtitle">Isaac Asimov</h4>
+        <p>A collection of 31 robot short stories by Asimov, grouped into two classes: <i>Robot-as-Pathos</i> and
+            <i>­Robot-as-Menace</i>. Sophisticated, captivating, and thought-provoking—Asimov doing what he does best. </p>
     </section>
 </div>
 
