FIX: Small stuff

--- a/content/research.html
+++ b/content/research.html
@@ -64,7 +64,7 @@
                 fields such as
                 cognitive psychology and neuroscience in tandem with the philosopher's armchair. In
                 light of this, I am
-                currently part of a research group led by <a href="https://markuskneer.com">Dr. Markus Kneer </a> called
+                currently part of a research group led by <a href="https://markuskneer.com">Dr. Markus Kneer</a> called
                 Reading Guilty
                 Minds,
                 where we try to unravel the mysteries behind mental states such as belief, knowledge and
@@ -88,8 +88,7 @@
                 neuroscientific findings
                 for the criminal law. The full-text can be found
                 <a href="https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law">
-                    on my ResearchGate profile here
-                </a>.
+                    on my ResearchGate profile here</a>.
             </p>
         </div>
     </section>
