FIX: Levin's quick fixes, sent over WA

--- a/content/about.html
+++ b/content/about.html
@@ -63,14 +63,14 @@
                 artificial intelligence. In my free time I enjoy going to the gym, reading, and playing chess.
             </p>
             <p>
-                You can find my full CV here [still missing]. If you are interested in the research I am conducting, check
+                You can find my full CV here [tba]. If you are interested in the research I am conducting, check
                 out
                 the <i>Research</i> page. The <i>Personal</i> page includes a glimpse at some of my favourite books—each paired with a
                 short summary. As the website develops, I will be sure to add more sections to the <i>Personal</i> page, such
                 as quotes and pictures, so stay tuned for that! 
             </p>
             <p>
-                If you want to get in touch, you can reach me under the following address: levinsinan.guever@uzh.ch—or, alternatively, by clicking on the mail icon at the bottom of the page.
+                If you want to get in touch, you can reach me under the following address: levinsinan.guever(at)uzh.ch—or, alternatively, by clicking on the mail icon at the bottom of the page.
             </p>
         </div>
     </section>
